# ChangeLog for media-gfx/cld-themes
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*cld-themes-10.0.1 (11 Dec 2009)

  11 Dec 2009; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +cld-themes-10.0.1.ebuild:
  Version bump. Add update boot splash.

  02 Dec 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  cld-themes-10.0-r1.ebuild:
  Fix dependens.

*calculate-cld-themes-10.0-r1 (23 Nov 2009)

  23 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
  +cld-themes-10.0.ebuild:
  Themes for Calculate Linux Desktop KDE 10.0 moved from calculate-cld-themes