@@ -1,9 +1,11 @@
 DIST cld-themes-10.0.tar.bz2 20541271 RMD160 73d344b9534919c35e12b079ea7956719a0483e5 SHA1 ad3b0ded0bf469ef089a3450e5d84aaa2c33e2b3 SHA256 f6c62fb7155381238f0ffd66f9345cc313c18761d9f8f5d832df1c8018f55e8b
 DIST cld-themes-10.2.tar.bz2 19719075 RMD160 6c4db5a87026d65cc818872b0f511e4bd7b4cd84 SHA1 06a2c266e8e168204f470fb89373c61b3e2a04a1 SHA256 d5fb433f8408ab2a235eb8ad3cf8b70ebee37daf709e893efdf377363196dd3d
 DIST cld-themes-10.4.tar.bz2 19719147 RMD160 36e04b6a488f155775f9d29d8f2dcea8133c1d32 SHA1 ceb342ed8b35c2b9eb079828ba754d4fe99ef514 SHA256 8f97cdf3db7295f916300c2f73b99de40ed999c9bfd96e44447365bfbf0eb2f1
+DIST cld-themes-10.9.tar.bz2 20950698 RMD160 22e23babccd53db869014f361ff54a610c98b07a SHA1 bc7789e9c625581ff0755ac078068a5c25d7ede3 SHA256 3464c55d1a3746df0cafd5afb53ebb4fd29c95c9ad62cc3b8be39382ed7ae968
 EBUILD cld-themes-10.0-r1.ebuild 2095 RMD160 cbbb5720dacbf56eb5998fc61a3d252111865556 SHA1 0a7864a38d04f84879801075e41cbf7a0ec7dfec SHA256 52b5880d37c79fa43f1401b0a096f9aa6803e18e95fb5bc79e3a4cc5ae2503de
 EBUILD cld-themes-10.0.1.ebuild 2212 RMD160 3a33ab63efc6e45ead529e49823f698d4341112d SHA1 b3a44f30811753710d8d9400b52031ec7e1fbb9d SHA256 80fa155271d4d44dcb0809d11fe0a5790a642192ccb6b6b4561a813f6a4fa601
 EBUILD cld-themes-10.2-r3.ebuild 2308 RMD160 da2a13f9c4585b7c942dda8fcc58fc80c5c329f6 SHA1 ee76841c4476ac0b6629f35bc64289cfac72861a SHA256 ef96f69e16845a5493eb4dc80653e7d524fbc961e789bcfa8075ac2dae39776f
 EBUILD cld-themes-10.4.ebuild 2308 RMD160 da2a13f9c4585b7c942dda8fcc58fc80c5c329f6 SHA1 ee76841c4476ac0b6629f35bc64289cfac72861a SHA256 ef96f69e16845a5493eb4dc80653e7d524fbc961e789bcfa8075ac2dae39776f
-MISC ChangeLog 600 RMD160 9885471c9772475aa1395bf00f45ddc2e8f54d8f SHA1 72588bd49ddcfdbf6d3a4b60ac324dfef049a776 SHA256 6b484edafbecf039d6c0546154d9c3ee0f74248091c90e8fa09e514eb0584037
+EBUILD cld-themes-10.9.ebuild 2409 RMD160 48c3347afe3af505910c6e94531f3e856090dffb SHA1 dc9ba38dc7a2c2711ae0b664c2f23d7280cb43f4 SHA256 fc521947fefea789bbc13a95626a29065340a253c66f3e1907a175db9f82fd90
+MISC ChangeLog 736 RMD160 a67cdb804d8b68005d1233a8e4030a251faae842 SHA1 fcdfe1b091eb8680ad9ed340bea0a3afc4197c97 SHA256 9ce33920d73dfb7e7611074b6e1cca65b4703c643edcbefdfb63397babb1a9a4
 MISC metadata.xml 260 RMD160 59c747eaacafdcd25e3ff8c6a015d7b6879ff2c6 SHA1 bbc63bb4cd46fe301ef559f8945c614c338e5193 SHA256 7c0be206f5d6dd3bc91b97f691127a424cce958a1249ab726467278de23455e7
