@@ -3,6 +3,7 @@
 ~app-misc/cld-meta-10.8.81 amd64 x86
 
 ~media-gfx/cls-themes-10.9 amd64 x86
+~media-gfx/cld-themes-10.9 amd64 x86
 
 =sys-apps/calculate-9999 amd64 x86
 ~sys-apps/calculate-install-2.2.0.0_p20100812 amd64 x86
