@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/cld-themes
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*cld-themes-10.9 (24 Aug 2010)
+
+  24 Aug 2010; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +cld-themes-10.9.ebuild:
+  Bump version.
 
 *cld-themes-10.0.1 (11 Dec 2009)
 
